@@ -24,15 +24,23 @@ import au.gov.asd.tac.constellation.plugins.parameters.types.SingleChoiceParamet
 import au.gov.asd.tac.constellation.plugins.parameters.types.StringParameterType;
 import au.gov.asd.tac.constellation.plugins.parameters.types.StringParameterValue;
 import au.gov.asd.tac.constellation.utilities.temporal.TemporalFormatting;
+import au.gov.asd.tac.constellation.utilities.temporal.TimeZoneUtilities;
 import au.gov.asd.tac.constellation.utilities.text.SeparatorConstants;
 import java.time.DateTimeException;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.TemporalAccessor;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.TimeZone;
+import java.util.regex.Pattern;
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.poi.ss.usermodel.DateUtil;
 import org.openide.util.lookup.ServiceProvider;
 
@@ -46,9 +54,12 @@ public class DatetimeAttributeTranslator extends AttributeTranslator {
 
     public static final String FORMAT_PARAMETER_ID = PluginParameter.buildId(DatetimeAttributeTranslator.class, "format");
     public static final String CUSTOM_PARAMETER_ID = PluginParameter.buildId(DatetimeAttributeTranslator.class, "custom");
+    public static final String TIMEZONE_PARAMETER_ID = PluginParameter.buildId(DatetimeAttributeTranslator.class, "timezone");
 
     private static final String CUSTOM = "CUSTOM";
     private static final String EXCEL = "EXCEL";
+    private static final String EPOCH = "EPOCH";
+
 
     private static final Map<String, String> DATETIME_FORMATS = new LinkedHashMap<>();
 
@@ -60,7 +71,7 @@ public class DatetimeAttributeTranslator extends AttributeTranslator {
         DATETIME_FORMATS.put("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'", "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
         DATETIME_FORMATS.put("yyyyMMdd HHmmss'Z'", "yyyyMMdd HHmmss'Z'");
         DATETIME_FORMATS.put("yyyyMMddHHmmss", "yyyyMMddHHmmss");
-        DATETIME_FORMATS.put("EPOCH", null);
+        DATETIME_FORMATS.put(EPOCH, null);
         DATETIME_FORMATS.put(EXCEL, null);
         DATETIME_FORMATS.put(CUSTOM, null);
     }
@@ -89,50 +100,108 @@ public class DatetimeAttributeTranslator extends AttributeTranslator {
         customParam.setStringValue("");
         parameters.addParameter(customParam);
 
+        final PluginParameter<SingleChoiceParameterValue> timeZoneParam = SingleChoiceParameterType.build(TIMEZONE_PARAMETER_ID);
+        timeZoneParam.setName("Time Zone");
+        timeZoneParam.setDescription("The time zone the dates represent");
+
+        final ObservableList<ZoneId> timeZones = FXCollections.observableArrayList();
+        ZoneId.getAvailableZoneIds().forEach(id -> timeZones.add(ZoneId.of(id)));
+        final ObservableList<ZoneId> timeZonesSorted = timeZones.sorted(zoneIdComparator);
+
+        final List<String> timeZonesSortedString = FXCollections.observableArrayList();
+        timeZonesSortedString.add("");
+        timeZonesSorted.forEach(id -> timeZonesSortedString.add(TimeZoneUtilities.getTimeZoneAsString(id)));
+
+        SingleChoiceParameterType.setOptions(timeZoneParam, timeZonesSortedString);
+        SingleChoiceParameterType.setChoice(timeZoneParam, timeZonesSortedString.get(0));
+        parameters.addParameter(timeZoneParam);
+
         parameters.addController(FORMAT_PARAMETER_ID, (final PluginParameter<?> master, final Map<String, PluginParameter<?>> params, final ParameterChange change) -> {
             if (change == ParameterChange.VALUE) {
-                final PluginParameter<?> slave = params.get(CUSTOM_PARAMETER_ID);
-                slave.setEnabled(master.getStringValue().equals(CUSTOM));
+                params.get(CUSTOM_PARAMETER_ID).setEnabled(master.getStringValue().equals(CUSTOM));
+                enableDisableTimeZone(master, params);
+            }
+        });
+
+        parameters.addController(CUSTOM_PARAMETER_ID, (final PluginParameter<?> master, final Map<String, PluginParameter<?>> params, final ParameterChange change) -> {
+            if (change == ParameterChange.VALUE) {
+                enableDisableTimeZone(master, params);
             }
         });
 
         return parameters;
     }
 
+    private void enableDisableTimeZone(final PluginParameter<?> master, final Map<String, PluginParameter<?>> params){
+        // Disables the Time Zone field if the Date time Format or Custom Format contains a Time Zone while it's not an EPOCH time
+        final String format =  master.getStringValue();
+        params.get(TIMEZONE_PARAMETER_ID).setEnabled(!containsTimeZone(format) && !format.equals(EPOCH));
+    }
+
+    private boolean containsTimeZone(final String format){
+        return Pattern.matches(".*[XxZzOV']$", format);
+    }
+
+
     @Override
     public String translate(final String value, final PluginParameters parameters) {
 
         try {
             String format = parameters.getParameters().get(FORMAT_PARAMETER_ID).getStringValue();
+            final PluginParameter timeZoneParam = parameters.getParameters().get(TIMEZONE_PARAMETER_ID);
 
-            final TemporalAccessor dateTime;
+            final ZonedDateTime zonedDateTime;
             switch (format) {
-                case "EPOCH":
-                    dateTime = TemporalFormatting.zonedDateTimeFromLong(Long.parseLong(value));
-                    break;
+                case EPOCH:
+                    zonedDateTime = TemporalFormatting.zonedDateTimeFromLong(Long.parseLong(value));
+                    return translateFromZonedDateTime(zonedDateTime, timeZoneParam);
+                case EXCEL:
+                    // "GMT" is used here to avoid it using the user's local time zone. 
+                    // If the user has selected a time zone, it is applied seperately in `translateFromZonedDateTime`
+                    zonedDateTime = TemporalFormatting.zonedDateTimeFromLong(DateUtil.getJavaDate(Double.parseDouble(value), TimeZone.getTimeZone("GMT")).getTime());
+                    return translateFromZonedDateTime(zonedDateTime, timeZoneParam);
                 case CUSTOM: {
                     format = parameters.getParameters().get(CUSTOM_PARAMETER_ID).getStringValue();
-                    final DateTimeFormatter df = DateTimeFormatter.ofPattern(format);
-                    dateTime = df.parse(value);
-                    break;
-                }
-                case EXCEL: 
-                    dateTime = TemporalFormatting.zonedDateTimeFromLong(DateUtil.getJavaDate(Double.parseDouble(value), TimeZone.getTimeZone("GMT")).getTime());
-                    break;
+                    return translateFromTemporalAccessorDateTime(value, format, timeZoneParam);
+                }                
                 default: {
                     format = DATETIME_FORMATS.get(format);
-                    final DateTimeFormatter df = DateTimeFormatter.ofPattern(format);
-                    dateTime = df.parse(value);
-                    break;
+                    return translateFromTemporalAccessorDateTime(value, format, timeZoneParam);
                 }
             }
-
-            return TemporalFormatting.formatAsZonedDateTime(dateTime);
-
         } catch (final DateTimeException | IllegalArgumentException ex) {
             return "ERROR";
         }
     }
+
+    private String translateFromZonedDateTime( final ZonedDateTime zonedDateTime, final PluginParameter timeZoneParam){
+        final String timeZone = timeZoneParam.getStringValue();
+        if (timeZoneParam.isEnabled() && StringUtils.isNotBlank(timeZone)) {
+            ZonedDateTime dateTimeInSpecifiedTimeZone = zonedDateTime.withZoneSameLocal(TimeZone.getTimeZone(StringUtils.substringBetween(timeZone, "[", "]")).toZoneId());
+            return TemporalFormatting.ZONED_DATE_TIME_FORMATTER.format(dateTimeInSpecifiedTimeZone);
+        } else {
+            return TemporalFormatting.formatAsZonedDateTime(zonedDateTime);
+        }
+    }
+    
+    private String translateFromTemporalAccessorDateTime(final String value, final String format, final PluginParameter timeZoneParam){
+        final DateTimeFormatter df = DateTimeFormatter.ofPattern(format);
+        final String timeZone = timeZoneParam.getStringValue();
+        // ZonedDateTime.parse requires a time zone identifier in the string (`value`)
+        // hence zonedDateTime = ZonedDateTime.parse(value, df); doesn't work for all other formats
+        if (timeZoneParam.isEnabled() && StringUtils.isNotBlank(timeZone)) {
+            ZonedDateTime dateTimeInSpecifiedTimeZone = ZonedDateTime.parse(value, df.withZone(TimeZone.getTimeZone(StringUtils.substringBetween(timeZone, "[", "]")).toZoneId()));
+            return TemporalFormatting.ZONED_DATE_TIME_FORMATTER.format(dateTimeInSpecifiedTimeZone);
+        } else {
+            final TemporalAccessor temporalAccessorDateTime = df.parse(value);
+            return TemporalFormatting.formatAsZonedDateTime(temporalAccessorDateTime);
+        }
+    }
+
+    private final Comparator<ZoneId> zoneIdComparator = (t1, t2) -> {
+        final int offsetCompare = Integer.compare(TimeZone.getTimeZone(t1).getRawOffset(), TimeZone.getTimeZone(t2).getRawOffset());
+        return offsetCompare != 0 ? offsetCompare : t1.getId().compareTo(t2.getId());
+    };
 
     @Override
     public String getParameterValues(final PluginParameters parameters) {
